analisador_sintatico.py
# -*- coding: utf-8 -*-
######           Analisador Sintatico    ######
# Autor 1: Lucas Vinicius dos Santos Assis
# Autor 2: Andressa Moura de Souza
# EXA 869 - MI - Processadores de Linguagem de Programacao
# ==============================================================================
# Implementacao do analisador sintatico de um compilador

# Bibliotecas para entrada e saida de arquivos
import sys
import os.path

# Bliblioteca padrao de string
import string

# Declarando Classe do Analisador Sintatico
class AnalisadorSintatico():
  # ========================== DECLARACAO DE METODOS DA CLASSE
  # Metodo construtor da classe
  def __init__(self):
    self.arquivo_entrada = "resp-lex.txt"
    self.arquivo_saida = "resp-sint.txt"

    self.tem_erro_sintatico = False

    self.arquivo_saida = open(self.arquivo_saida, 'w')
    # Verifica se o arquivo de entrada existe no diretorio em questao
    if not os.path.exists(self.arquivo_entrada):
      print("Arquivo de entrada inexistente")
      self.arquivo_saida.write("Arquivo de entrada inexistente")
      return

    # Abre o arquivo de entrada do programa
    self.arquivo = open(self.arquivo_entrada, 'r')
    self.tokens = self.arquivo.readlines()
    self.arquivo.close()
    self.i = 0
    self.linha_atual = ""

  # Metodo para mudar arquivo de entrada
  def mudaEntrada(self, string):
    self.arquivo_entrada = string

  def getEntrada(self):
    return self.arquivo_entrada

  def getSaida(self):
    return self.arquivo_saida

  # CADA UMA DAS FUNCOES ABAIXO REPRESENTA UMA PRODUCAO DA GRAMATICA
  '''
    O algoritmo basico que foi seguindo para construir as funcoes representa 
    um analisador sintatico preditivo recursivo, segue o codigo abaixo:
    void A(){
      Escolha uma producao-A, A-> x1, x2, ... , xk 
      for(i = 1 ateh k){
        if(xi eh um nao terminal){
          ativa procedimento xi();
        }
        else if(xi igual ao simbolo de entrada a){
          avance a entrada ao proximo simbolo
        }
        else{
          ocorreu um erro
        }
      }
    }
  '''

  # <start> := <registro_declaracao><constantes_declaracao><variaveis_declaracao><funcao_declaracao><algoritmo_declaracao> 
  def start(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    self.registro_declaracao()
    self.constantes_declaracao()
    self.variaveis_declaracao()
    self.funcao_declaracao()
    self.algoritmo_declaracao()
    
    if(self.tem_erro_sintatico):
      print("Verifique os erros sintaticos e tente compilar novamente")
      self.arquivo_saida.write("Verifique os erros sintaticos e tente compilar novamente\n")
    else:
      if("$" in self.tokens[self.i]):
        print("Cadeia de tokens reconhecida com sucesso")
        self.arquivo_saida.write("Cadeia de tokens reconhecida com sucesso\n")
      else:
        print("Fim de Programa Nao Encontrado!")
        self.arquivo_saida.write("Fim de Programa Nao Encontrado!")

    # Fechando arquivo de saida
    self.arquivo_saida.close()

  # <registro_declaracao> := registro token_identificador { <declaracao_reg> } <registro_declaracao> | Ɛ                   
  def registro_declaracao(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    if( 'tok603_registro' in self.tokens[self.i] ):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      if( 'tok500_' in self.tokens[self.i] ):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        if( 'tok204_{' in self.tokens[self.i] ):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
          self.declaracao_reg()
          if( 'tok205_}' in self.tokens[self.i] ):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
            self.registro_declaracao()
          else:
            print("Erro sintatico - Esperado '}'  - linha: "+self.linha_atual+"\n")
            self.arquivo_saida.write("Erro sintatico  - Esperado '}' - linha: "+self.linha_atual+"\n")
            print('Token problemático: '+self.tokens[self.i])
            self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
            self.tem_erro_sintatico = True
            while( not 'tok602_constantes' in self.tokens[self.i] or not 'tok603_registro' in self.tokens[self.i]):
              self.i += 1
              self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        else:
          print("Erro sintatico - Esperado '{' - linha: "+self.linha_atual+"\n")
          self.arquivo_saida.write("Erro sintatico - Esperado '{'  - linha: "+self.linha_atual+"\n")
          print('Token problemático: '+self.tokens[self.i])
          self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
          self.tem_erro_sintatico = True
          while( not 'tok602_constantes' in self.tokens[self.i] or not 'tok603_registro' in self.tokens[self.i]):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      else:
        print("Erro sintatico - Esperado um 'identificador' - linha: "+self.linha_atual+"\n")
        self.arquivo_saida.write("Erro sintatico  - Esperado um 'identificador' - linha: "+self.linha_atual+"\n")
        print('Token problemático: '+self.tokens[self.i])
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        self.tem_erro_sintatico = True
        while( not 'tok602_constantes' in self.tokens[self.i] or not 'tok603_registro' in self.tokens[self.i]):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        return
    elif ('tok602_constantes' in self.tokens[self.i]):
      return
    else:
      print("Erro sintatico - Esperado a palavra reservada 'registro'  - linha: "+self.linha_atual+"\n")
      self.arquivo_saida.write("Erro sintatico  - Esperado a palavra reservada 'registro'  - linha: "+self.linha_atual+"\n")
      print('Token problemático: '+self.tokens[self.i])
      self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
      self.tem_erro_sintatico = True
      if( 'tok602_constantes' in self.tokens[self.i] or 'tok603_registro' in self.tokens[self.i]):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      while( not 'tok602_constantes' in self.tokens[self.i] or not 'tok603_registro' in self.tokens[self.i]):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        
  # <declaracao_reg> := <declaracao>; <declaracao_reg> | Ɛ                                                                 
  def declaracao_reg(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    if("tok205_}" in self.tokens[self.i]):
      return
    self.declaracao()
    if( 'tok200_;' in self.tokens[self.i]):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      self.declaracao_reg()
    else:
      print("Erro sintatico - Esperado ';'  - linha: "+self.linha_atual+"\n")
      self.arquivo_saida.write("Erro sintatico  - Esperado ';' - linha: "+self.linha_atual+"\n")
      print('Token problemático: '+self.tokens[self.i])
      self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
      self.tem_erro_sintatico = True
      while( not "tok205_}" in self.tokens[self.i]):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]


  # <declaracao> := <tipo_primitivo> token_identificador                                                                  
  def declaracao(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    self.tipo_primitivo()
    if( 'tok500_' in self.tokens[self.i] ):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
    else:
      if('tok200_;' in self.tokens[self.i]):
        while('tok200_;' in self.tokens[self.i]):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        print("Erro sintatico - ';' duplicado  - linha: "+self.linha_atual+"\n")
        self.arquivo_saida.write("Erro sintatico  - ';' duplicado - linha: "+self.linha_atual+"\n")
        print('Token problemático: '+self.tokens[self.i])
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        self.tem_erro_sintatico = True  
      else:
        print("Erro sintatico - Esperado um 'indentificador'  - linha: "+self.linha_atual+"\n")
        self.arquivo_saida.write("Erro sintatico  - Esperado um 'identificador' - linha: "+self.linha_atual+"\n")
        print('Token problemático: '+self.tokens[self.i])
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        self.tem_erro_sintatico = True
      while( not 'tok200_;' in self.tokens[self.i]):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      
        
  # <tipo_primitivo> := cadeia | real | inteiro | char | booleano                                                         
  def tipo_primitivo(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    if( 'tok617_cadeia' in self.tokens[self.i] or 
      'tok614_real' in self.tokens[self.i] or
      'tok613_inteiro' in self.tokens[self.i] or
      'tok616_char' in self.tokens[self.i] or
      'tok615_booleano' in self.tokens[self.i]):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
    else:
      if('tok200_;' in self.tokens[self.i]):
        while('tok200_;' in self.tokens[self.i]):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        self.arquivo_saida.write("Erro sintatico - ';' duplicados:  - linha: "+self.linha_atual+"\n")
        print("Erro sintatico - ';' duplicados "+self.linha_atual+"\n")
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        print('Token problemático: '+self.tokens[self.i])
        self.tem_erro_sintatico = True
      self.arquivo_saida.write("Erro sintatico - Esperado as palavras reservadas 'cadeida' ou 'char' ou 'inteiro' ou 'real' ou 'booleano' - linha: "+self.linha_atual+"\n")
      print("Erro sintatico - Esperado as palavras reservadas 'cadeida' ou 'char' ou 'inteiro' ou 'real' ou 'booleano' - linha: "+self.linha_atual+"\n")
      self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
      print('Token problemático: '+self.tokens[self.i])
      self.tem_erro_sintatico = True
      while( not 'tok500_' in self.tokens[self.i]):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        
  # <constantes_declaracao> := constantes { <declaracao_const>  }                                                          
  def constantes_declaracao(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    if( 'tok602_constantes' in self.tokens[self.i] ):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        if( 'tok204_{' in self.tokens[self.i] ):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
          if( not "tok205_}" in self.tokens[self.i] ):
            self.declaracao_const()
          if( 'tok205_}' in self.tokens[self.i] ):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
          else:
            print("Erro sintatico - Esperado '}' - linha: "+self.linha_atual+"\n")
            self.arquivo_saida.write("Erro sintatico  - Esperado '}' - linha: "+self.linha_atual+"\n")
            print('Token problemático: '+self.tokens[self.i])
            self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
            self.tem_erro_sintatico = True
            if('tok601_variaveis' in self.tokens[self.i]):
              self.i += 1
              self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
            while( not 'tok601_variaveis' in self.tokens[self.i]):
              self.i += 1
              self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        else:
          print("Erro sintatico - Esperado '{' - linha: "+self.linha_atual+"\n")
          self.arquivo_saida.write("Erro sintatico  - Esperado '{' - linha: "+self.linha_atual+"\n")
          print('Token problemático: '+self.tokens[self.i])
          self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
          self.tem_erro_sintatico = True
          while( not 'tok601_variaveis' in self.tokens[self.i]):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
    else:
      print("Erro sintatico - Esperado a palavras reservada 'constantes' - linha: "+self.linha_atual+"\n")
      self.arquivo_saida.write("Erro sintatico  - Esperado as palavras reservadas 'constantes' - linha: "+self.linha_atual+"\n")
      print('Token problemático: '+self.tokens[self.i])
      self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
      self.tem_erro_sintatico = True
      while( not 'tok601_variaveis' in self.tokens[self.i]):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        
  # <declaracao_const> := <declaracao> = <valor_primitivo>; <declaracao_const> | Ɛ                                        
  def declaracao_const(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    if("tok205_}" in self.tokens[self.i]):
      return
    self.declaracao()
    if( 'tok115_=' in self.tokens[self.i] ):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      self.valor_primitivo()
      if( 'tok200_;' in self.tokens[self.i] ):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        self.declaracao_const()
      else:
        self.arquivo_saida.write("Erro sintatico - Esperado símbolo ';' - linha: "+self.linha_atual+"\n")
        print("Erro sintatico - Esperado símbolo ';' - linha: "+self.linha_atual+"\n")
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        print('Token problemático: '+self.tokens[self.i])
        self.tem_erro_sintatico = True
        while( not 'tok205_}' in self.tokens[self.i]):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
    else:
      print("Erro sintatico - Esperado '=' - linha: "+self.linha_atual+"\n")
      self.arquivo_saida.write("Erro sintatico  - Esperado '=' - linha: "+self.linha_atual+"\n")
      print('Token problemático: '+self.tokens[self.i])
      self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
      self.tem_erro_sintatico = True
      while( not 'tok205_}' in self.tokens[self.i]):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]

  # <valor_primitivo> := token_cadeia | token_real | token_inteiro | token_char | verdadeiro | falso                       
  def valor_primitivo(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    if( 'tok300_' in self.tokens[self.i] or 
      'tok301_' in self.tokens[self.i] or
      'tok700_' in self.tokens[self.i] or
      'tok400_' in self.tokens[self.i] or
      'tok618_verdadeiro' in self.tokens[self.i] or
      'tok619_falso' in self.tokens[self.i]):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
    else:
      self.arquivo_saida.write("Erro sintatico - Esperado valor primitivo (numero, cadeia, char, verdadeiro ou falso):  - linha: "+self.linha_atual+"\n")
      print("Erro sintatico - Esperado valor primitivo (numero, cadeia, char, verdadeiro ou falso):  - linha: "+self.linha_atual+"\n")
      self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
      print('Token problemático: '+self.tokens[self.i])
      self.tem_erro_sintatico = True
      while( not 'tok200_;' in self.tokens[self.i]):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        
      
  # <variaveis_declaracao> := variaveis { <declaracao_var> }                                                               
  def variaveis_declaracao(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    if( 'tok601_variaveis' in self.tokens[self.i]):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      if( 'tok204_{' in self.tokens[self.i] ):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        # Indica que acabou a minha declaracao de registro
        if( not "tok205_}" in self.tokens[self.i] ):
          self.declaracao_var()
        if( 'tok205_}' in self.tokens[self.i] ):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        else:
          self.arquivo_saida.write("Erro sintatico - Esperado símbolo '}' ao final do bloco de variáveis - linha: "+self.linha_atual+"\n")
          print("Erro sintatico - Esperado símbolo '}' ao final do bloco de variáveis - linha: "+self.linha_atual+"\n")
          self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
          print('Token problemático: '+self.tokens[self.i])
          self.tem_erro_sintatico = True
          if('tok604_funcao' in self.tokens[self.i] or "tok600_algoritmo" in self.tokens[self.i]):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
          while( not 'tok604_funcao' in self.tokens[self.i] or "tok600_algoritmo" in self.tokens[self.i]):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      else:
        print("Erro sintatico - Esperado símbolo '{' após a declaração de variáveis - linha: "+self.linha_atual+"\n")
        self.arquivo_saida.write("Erro sintatico - Esperado símbolo '{' após a declaração de variáveis - linha: "+self.linha_atual+"\n")
        print('Token problemático: '+self.tokens[self.i])
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        self.tem_erro_sintatico = True
        while( not 'tok604_funcao' in self.tokens[self.i] or "tok600_algoritmo" in self.tokens[self.i]):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
    else:
      print("Erro sintatico - A declaracao do bloco de variáveis, mesmo que vazio, é obrigatória nessa linguagem - linha: "+self.linha_atual+"\n")
      self.arquivo_saida.write("Erro sintatico - A declaracao do bloco de variáveis, mesmo que vazio, é obrigatória nessa linguagem - linha: "+self.linha_atual+"\n")
      print('Token problemático: '+self.tokens[self.i])
      self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
      self.tem_erro_sintatico = True
      while( not 'tok604_funcao' in self.tokens[self.i] or "tok600_algoritmo" in self.tokens[self.i]):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      
  # <declaracao_var> := <declaracao> <identificador_deriva>; <declaracao_var> | token_identificador token_identificador; <declaracao_var> | Ɛ 
  def declaracao_var(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    # No caso da declaração ser de um tipo registro, espero um identificador
    if( 'tok500_' in self.tokens[self.i] ):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      if( 'tok500_' in self.tokens[self.i] ):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        if( 'tok200_;' in self.tokens[self.i] ):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
          if(not 'tok205_}' in self.tokens[self.i] ):
            self.declaracao_var()
        else:
          print("Erro sintatico - Esperado símbolo ';' após identificador nome do tipo registro declarado - linha: "+self.linha_atual+"\n")
          print('Token problemático: '+self.tokens[self.i])
          self.arquivo_saida.write("Erro sintatico - Esperado símbolo ';' após identificador nome do tipo registro declarado - linha: "+self.linha_atual+"\n")
          self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
          self.tem_erro_sintatico = True
          while( not 'tok617_cadeia' in self.tokens[self.i] or 
          not 'tok614_real' in self.tokens[self.i] or
          not 'tok613_inteiro' in self.tokens[self.i] or
          not 'tok616_char' in self.tokens[self.i] or
          not 'tok615_booleano' in self.tokens[self.i] or
          not 'tok500_' in self.tokens[self.i]):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      else:
        print("Erro sintatico - Esperado identificador nome do tipo registro declarado - linha: "+self.linha_atual+"\n")
        print('Token problemático: '+self.tokens[self.i])
        self.arquivo_saida.write("Erro sintatico - Esperado identificador nome do tipo registro declarado - linha: "+self.linha_atual+"\n")
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        self.tem_erro_sintatico = True
        while( not 'tok617_cadeia' in self.tokens[self.i] or 
          not 'tok614_real' in self.tokens[self.i] or
          not 'tok613_inteiro' in self.tokens[self.i] or
          not 'tok616_char' in self.tokens[self.i] or
          not 'tok615_booleano' in self.tokens[self.i] or
          not   'tok500_' in self.tokens[self.i]):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
    elif('tok617_cadeia' in self.tokens[self.i] or 
          'tok614_real' in self.tokens[self.i] or
          'tok613_inteiro' in self.tokens[self.i] or
          'tok616_char' in self.tokens[self.i] or
          'tok615_booleano' in self.tokens[self.i]):
      self.declaracao()
      self.identificador_deriva()
      if( 'tok200_;' in self.tokens[self.i] ):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        if( not 'tok205_}' in self.tokens[self.i] ):
          self.declaracao_var()
      else:
        print("Erro sintatico - Esperado símbolo ';' após a declaração da varável simples, vetor ou matriz - linha: "+self.linha_atual+"\n")
        print('Token problemático: '+self.tokens[self.i])
        self.arquivo_saida.write("Erro sintatico - Esperado símbolo ';' após a declaração da varável simples, vetor ou matriz - linha: "+self.linha_atual+"\n")
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        self.tem_erro_sintatico = True
        while( not 'tok617_cadeia' in self.tokens[self.i] or 
          not 'tok614_real' in self.tokens[self.i] or
          not 'tok613_inteiro' in self.tokens[self.i] or
          not 'tok616_char' in self.tokens[self.i] or
          not 'tok615_booleano' in self.tokens[self.i] or
          not 'tok500_' in self.tokens[self.i]):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
    else:
      if('tok200_;' in self.tokens[self.i]):
        while('tok200_;' in self.tokens[self.i]):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        self.arquivo_saida.write("Erro sintatico - ';' duplicados:  - linha: "+self.linha_atual+"\n")
        print("Erro sintatico - ';' duplicados "+self.linha_atual+"\n")
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        print('Token problemático: '+self.tokens[self.i])
        self.tem_erro_sintatico = True
      self.arquivo_saida.write("Erro sintatico - Esperado as palavras reservadas 'cadeida' ou 'char' ou 'inteiro' ou 'real' ou 'booleano' ou Tipo de Registro - linha: "+self.linha_atual+"\n")
      print("Erro sintatico - Esperado as palavras reservadas 'cadeida' ou 'char' ou 'inteiro' ou 'real' ou 'booleano' ou Tipo de Registro - linha: "+self.linha_atual+"\n")
      self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
      print('Token problemático: '+self.tokens[self.i])
      self.tem_erro_sintatico = True
      while( not 'tok617_cadeia' in self.tokens[self.i] or 
          not 'tok614_real' in self.tokens[self.i] or
          not 'tok613_inteiro' in self.tokens[self.i] or
          not 'tok616_char' in self.tokens[self.i] or
          not 'tok615_booleano' in self.tokens[self.i] or
          not 'tok500_' in self.tokens[self.i] ):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      
  # <identificador_deriva> := [token_inteiro]<matriz> | <inicializacao> | Ɛ                                                
  def identificador_deriva(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    if('tok200_;' in self.tokens[self.i]):
      return
    elif ( 'tok206_[' in self.tokens[self.i] ):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      if ( 'tok300_' in self.tokens[self.i] ):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        if ( 'tok207_]' in self.tokens[self.i] ):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
          self.matriz()
        else:
          print("Erro sintatico - Colchetes desbalanceados - linha: "+self.linha_atual+"\n")
          print('Token problemático: '+self.tokens[self.i])
          self.arquivo_saida.write("Erro sintatico - Colchetes desbalanceados - linha: "+self.linha_atual+"\n")
          self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
          self.tem_erro_sintatico = True
          while( not 'tok200_;' in self.tokens[self.i]):
            self.i += 1
            self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      else:
        print("Erro sintatico - Esperado número inteiro após a declaração de vetor ou matriz - linha: "+self.linha_atual+"\n")
        print('Token problemático: '+self.tokens[self.i])
        self.arquivo_saida.write("Erro sintatico - Esperado número inteiro após a declaração de vetor ou matriz - linha: "+self.linha_atual+"\n")
        self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
        self.tem_erro_sintatico = True
        while( not 'tok200_;' in self.tokens[self.i]):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
    elif('tok115_=' in self.tokens[self.i]):
          self.inicializacao()
    else:
      print("Erro sintatico - Esperado '[' ou '=' - linha: "+self.linha_atual+"\n")
      print('Token problemático: '+self.tokens[self.i])
      self.arquivo_saida.write("Erro sintatico - Esperado '[' ou '=' - linha: "+self.linha_atual+"\n")
      self.arquivo_saida.write('Token problemático: '+self.tokens[self.i]+'\n')
      self.tem_erro_sintatico = True
      while( not 'tok200_;' in self.tokens[self.i]):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      
  # <matriz> := [token_inteiro] | Ɛ                                                                                        
  def matriz(self):
    if("Erro Lexico" in self.tokens[self.i]):
      self.i += 1
    if('tok200_;' in self.tokens[self.i]):
      return
    elif ( 'tok206_[' in self.tokens[self.i] ):
      self.i += 1
      self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
      if ( 'tok300_' in self.tokens[self.i] ):
        self.i += 1
        self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        if ( 'tok207_]' in self.tokens[self.i] ):
          self.i += 1
          self.linha_atual = self.tokens[self.i][ self.tokens[self.i].find('->')+2: -1]
        else:
          print("Erro sintatico - Colchetes desbalanceados - linha: "+self.linha_atual+"\n")
          print('Token problemático: '+self.tokens[self.i])
